--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,34 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
-/.pnp
-.pnp.js
+package-lock.json
 
-# testing
+# Testing
 /coverage
 
-# production
+# MAC
+.DS_Store
+
+# Production
 /build
 
-# misc
-.DS_Store
+# Keys
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# MDB
+mdbreact-*
+
+# All editor configs but vscode
+.editorconfig
+.idea
+
+# Logs
+*.log*
+
+# SPDX-License-Identifier: (EUPL-1.2)
+# Copyright © 2019-2020 Simon Prast
