--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ package-lock.json
 
 # Production
 /build
+/lib
 
 # Keys
 .env
@@ -22,6 +23,9 @@ package-lock.json
 
 # MDB
 mdbreact-*
+
+# React
+react-app-env.d.ts
 
 # All editor configs but vscode
 .editorconfig
