--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "dependencies": {
     "mdbreact": "^4.27.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "remark-first-heading": "^2.0.3",
+    "remark-github": "^9.0.1"
   }
 }
